@@ -1,0 +1,31 @@
+
+#    listf=open(listh+"-from"+filelib.get(1)+".txt","w")
+    print listh+"-from"+filelib.get(1)+".txt"
+    print "\n".join(library.pop(filelib.get(1)))
+#    listf.write()
+    for letters in letterset[1:len(letterset)-1]:
+        if letters[0]==filelib.get(2):
+            break
+        else:
+            if library.get(letters[0]) != []:
+                print "\n".join(library.pop(letters[0]))
+    if pagenum=2:
+        print listh+"-from"+filelib.get(2)+".txt"
+        for letters in letterset[1:len(letterset)-1]:
+            if letters[0]==filelib.get(num):
+                break
+            else:
+                if library.has_key(letters[0]):
+                    if library.get(letters[0]) != []:
+                        print "\n".join(library.pop(letters[0]))
+    if pagenum>2:
+        for num in range(2,pagenum):
+            print listh+"-from"+filelib.get(num)+".txt"
+            for letters in letterset[1:len(letterset)-1]:
+                if letters[0]==filelib.get(num):
+                    break
+                else:
+                    if library.has_key(letters[0]):
+                        if library.get(letters[0]) != []:
+                            print "\n".join(library.pop(letters[0]))
+        
